--- a/README
+++ b/README
@@ -2,5 +2,5 @@
 Cubensis is a research project on shader compiler systems, and graphical processor designs.
 
 # Contributors
-Lillith Anderson - GPU Architecture
-Garcia 
+Lillith Anderson - GPU Architect
+Jaiden Garcia - Shader Compiler Architect
